--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,4 +1,4 @@
-@import "./routers/Card.css";
+@import "./Card.css";
 
 a {
   text-decoration: none;
@@ -6,7 +6,7 @@ a {
 
 .categoryBar {
     position: absolute;
-    font-size: 30px;
+    font-size: 30p;
     top: 5px;
     right: 5px;
 }
