--- a/Frontend/src/routers/ItemDeatilPage/Detail.css
+++ b/Frontend/src/routers/ItemDeatilPage/Detail.css
@@ -6,13 +6,15 @@
     padding: 20px;
 }
 
+.detail
+
+
 .detail__box {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     height: 100vh;
-    
 }
 
 .detail__maindata {
@@ -36,6 +38,7 @@
     color: whitesmoke;
     padding: 20px;
     margin-top: 20px;
+
 }
 
 .detail__metadata {
@@ -59,9 +62,11 @@
     padding: 20px 20px;
     font-size: 30px;
     border-radius: 20px;
+    height: 30px;
 }
 
 .detail__price {
+    height: 70px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -69,10 +74,12 @@
 }
 
 .detail__price > span:first-child {
+    height: 16px;
     text-decoration: line-through;
     opacity: 70%;
 }
 
 .detail__price > span:last-child {
+    height: 25px;
     font-size:25px;
 }
